--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     font-family: 'Comfortaa', sans-serif;
     font-size: 35px;
     padding: 15px;
-    background: url(/split/images/divide.png);
+    background: url(../split/images/divide.png);
     background-size: 30px;
     background-repeat: no-repeat;
     background-position: 110px 20px;
@@ -41,7 +41,7 @@
 }
 
 select {
-    background: url(/split/images/down-arrow.png);
+    background: url(../split/images/down-arrow.png);
     background-position: 93.5%;
     background-size: 20px;
     background-repeat: no-repeat;
@@ -280,7 +280,7 @@ select {
 }
 
 .add-split-button {
-    background: url(/split/images/add\ \(1\).png);
+    background: url(../split/images/add-black.png);
     width: 30px;
     height: 30px;
     margin-top: 15px;
