--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ select {
     height: 20px;
     background-color: white;
     border: none;
-    background: url(/split/images/recycle-bin.png);
+    background: url(../split/images/recycle-bin.png);
     background-size: 18px;
     background-repeat: no-repeat;
 
